Wed Apr 17 13:46:57 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in (LOGINLIBS): Remove DECLARE_SYS_ERRLIST since it's
		no longer necessary.

	* krcp.c (verifydir, allocbuf, rsource, source, sink): Don't use
 		sys_errlist[]; just call error_message() instead, since we
 		depend on com_err anyway.

	* krshd.c (recvauth): 
	* krlogind.c (recvauth): Don't actually check the checksum unless
 		it is required.  Old (pre-beta 5) clients sent a checksum
 		of random garbage (such as their pid) which is impossible to
 		actually check on the server side.  (Grad student stupidity
		strikes again.)
		(fatalperror): Don't use sys_errlist[] to get the right
		error message; just depend on com_err instead, since we're
		using it anyway.

	* krshd.c (doit): 
	* krlogind.c (do_krb_login): Fix logic so that if checksums are
	 	required, and the checksum is valid, don't syslog the
	 	stupid warning message about "Checksums are only required
	 	for v5 clients...."
  	
	* krcp.c, krshd.c, krlogind.c: Miscellaneous -Wall cleanups

	* krlogind.c (getpty): Removed dead code.

Tue Apr 16 11:33:33 1996  Sam Hartman  <hartmans@mit.edu>

	* krlogind.c kshd.c (main): Drop support for handling options in
	 	rlogind's name.

Sun Apr 14 03:41:49 1996  Sam Hartman  <hartmans@zygorthian-space-raiders.MIT.EDU>

	* krlogind.c (fatalperror): Only declar sys_errlist if needed.

	
Sat Apr 13 17:47:36 1996  Sam Hartman  <hartmans@mit.edu>

	* krshd.c (doit): Use setsid instead of setpgrp if you have it.
  	Note this doesn't work for Ultrix.

	* krlogind.c (doit): Don't call setpgrp or setsid; let pty library do
 	that for us.

Fri Apr 12 23:38:25 1996  Richard Basch  <basch@lehman.com>

	* krlogind.c (cleanup): Destroy any forwarded credentials at the
	end of the login session (they were placed in an unusual location
	anyway, so the chance that someone will be trying to reuse those
	credentials is minimal)

Thu Apr 11 00:22:51 1996  Richard Basch  <basch@lehman.com>
